# tat-hack-back

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
nginx/: nginx.conf
nginx/certs/: tathack.crt  tathack.key
src/tat_hack_back/: Dockerfile  requirements.txt
src/tat_hack_back/api/: main.py
src/tat_hack_back/api/config/: gunicorn.conf.py  sgi_config.py
src/tat_hack_back/domain/: giga_chat_config.py  voyage_config.py
